--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -12,6 +12,9 @@
 - title: Exercises
   url: /exercises/
 
+- title: Errata
+  url: /errata/
+
 - title: Cambridge website
   url: https://www.cambridge.org/core/books/computational-modeling-of-cognition-and-behavior/A4A90098E7CB9A58E5D030F408639D04
 
